syntax = "proto3";

package NAlice;

option go_package = "a.yandex-team.ru/alice/protos/endpoint/capabilities/vibration_sensor;vibrationpb";
option java_package = "ru.yandex.alice.protos.endpoint.capabilities";
option java_outer_classname = "VibrationSensorProto";

import "google/protobuf/descriptor.proto";

import "alice/protos/endpoint/capability.proto";
import "mapreduce/yt/interface/protos/extension.proto";

message TVibrationSensorCapability {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    option (CapabilityType) = VibrationSensorCapabilityType;

    TCapability.TMeta Meta = 1 [json_name = "meta", (NYT.column_name) = "meta"];
    TParameters Parameters = 2 [json_name = "parameters", (NYT.column_name) = "parameters"];
    TState State = 3 [json_name = "state", (NYT.column_name) = "state"];

    message TParameters {
        option (NYT.default_field_flags) = SERIALIZATION_YT;
    }

    message TState {
        option (NYT.default_field_flags) = SERIALIZATION_YT;
    }

    message TVibrationSensorVibrationEvent {
        option (NYT.default_field_flags) = SERIALIZATION_YT;
        option (EventType) = VibrationSensorVibrationEventType;
    }

    message TVibrationSensorTiltEvent {
        option (NYT.default_field_flags) = SERIALIZATION_YT;
        option (EventType) = VibrationSensorTiltEventType;
    }

    message TVibrationSensorFallEvent {
        option (NYT.default_field_flags) = SERIALIZATION_YT;
        option (EventType) = VibrationSensorFallEventType;
    }

    message TCondition {
        option (NYT.default_field_flags) = SERIALIZATION_YT;

        repeated TCapability.EEventType Events = 1 [json_name = "events", (NYT.column_name) = "events"];
    }
}
