syntax = "proto3";

package NAlice;

option go_package = "a.yandex-team.ru/alice/protos/endpoint/capabilities/water_leak_sensor;waterleaksensorpb";
option java_package = "ru.yandex.alice.protos.endpoint.capabilities";
option java_outer_classname = "WaterLeakSensorProto";

import "google/protobuf/descriptor.proto";

import "alice/protos/endpoint/capability.proto";
import "mapreduce/yt/interface/protos/extension.proto";

message TWaterLeakSensorCapability {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    option (CapabilityType) = WaterLeakSensorCapabilityType;

    TCapability.TMeta Meta = 1 [json_name = "meta", (NYT.column_name) = "meta"];
    TParameters Parameters = 2 [json_name = "parameters", (NYT.column_name) = "parameters"];
    TState State = 3 [json_name = "state", (NYT.column_name) = "state"];

    message TParameters {
        option (NYT.default_field_flags) = SERIALIZATION_YT;
    }

    message TState {
        option (NYT.default_field_flags) = SERIALIZATION_YT;
    }

    message TWaterLeakSensorLeakEvent {
        option (NYT.default_field_flags) = SERIALIZATION_YT;
        option (EventType) = WaterLeakSensorLeakEventType;
    }

    message TWaterLeakSensorDryEvent {
        option (NYT.default_field_flags) = SERIALIZATION_YT;
        option (EventType) = WaterLeakSensorDryEventType;
    }

    message TCondition {
        option (NYT.default_field_flags) = SERIALIZATION_YT;

        repeated TCapability.EEventType Events = 1 [json_name = "events", (NYT.column_name) = "events"];
    }
}
